manifests/manifests_components/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-collection-prod
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "docker.io/ohtukontitus/news-collection:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      name: news-collection-prod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: news-collection-prod
        app.kubernetes.io/part-of: news-collection-app
    spec:
      containers:
        - image: docker.io/ohtukontitus/news-collection:latest
          imagePullPolicy: Always
          name: news-collection
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/server/rss-fetcher/data
              name: news-collection-data-prod
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: news-collection-data-prod
          persistentVolumeClaim:
            claimName: data-prod
          resources:
            requests:
              memory: 40Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
  revisionHistoryLimit: 2
